<resources>
    <string name="app_name">XML Layout</string>
    <string name="cost_of_service">Cost Of Service</string>
    <string name="how_was_service">How was the Service</string>
    <string name="amazing">Amazing</string>
    <string name="good">Good (18%)</string>
    <string name="okay">Okay (15%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip Amount</string>

</resources>